Fix text wrapping in challenge score card
The score and the unit should always be on the same line.

--- a/Tevling/Components/ChallengeCard.razor.css
+++ b/Tevling/Components/ChallengeCard.razor.css
@@ -24,3 +24,7 @@
     text-wrap: nowrap;
     text-overflow: ellipsis;
 }
+
+.score {
+    text-wrap: nowrap;
+}
